upgrading app usage example app